kubernetes/apps/ai/toolhive/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp-gateway-internal
  annotations:
    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == 406"]
spec:
  hostnames:
    - "mcp-internal.${SECRET_DOMAIN:example.com}"
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: vmcp-mcp-gateway-internal
          port: 4483
